Add users auth context & openapi route
